traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:12: error: Unmatched closing brace '}' ignored here
                  {setPos(getX()+1,get(Y)-1);}}
                                              ^TraversalDiagonal:13: error: ';' expected but 'else' found.
       else 
       ^TraversalDiagonal:78: error: expected class or object definition
def positionFinale():Boolean= {
^TraversalDiagonal:81: error: Unmatched closing brace '}' ignored here
  return(false);} 
                ^